<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Code Warrior Contact</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_save">Save</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add Contact</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit">Edit</string>
    <string name="action_filter">Filter</string>
    <string name="desc">Help Image</string>
    <string name="no_image">Image not found</string>
    
    
    <string name="chk_wish_list">Wish List</string>
    <string name="chk_reminder">Reminder</string>
    <string name="chk_emergency">Emergency</string>
    
    <color name="white">#ffffff</color>
	<color name="black">#000000</color>
	<color name="yellow">#fffc00</color>
	<color name="blue">#0000ff</color>
	<color name="light_blue">#001ed3</color>
	<color name="red">#ff0000</color>
	<color name="light_red">#ff9b9b</color>
	<color name="green">#00ff00</color>
	<color name="light_green">#9bff9b</color>
	<color name="background">#d8ffd6</color>
	<color name="gray">#808080</color>
	<color name="light_gray">#d4d4d4</color>
	<color name="custom_color">#000016</color>
	
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <array name="drawermenulist">
	    <item>Home</item>
	    <item>Settings</item>
	    <item>Help</item>
	</array>
	
    <string name="sensitivity">Sensitivity\n(lower = more sensitive)</string>
    
</resources>
