<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
	<ImageView
	    android:id="@+id/contactPhoto"
	    android:layout_width="150dp"
	    android:layout_height="150dp"
	    android:layout_gravity="left"
	    android:contentDescription="@string/desc" />
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_gravity="right" >
	    
	    <CheckBox
        android:id="@+id/chkWishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_wish_list" />
 
    <CheckBox
        android:id="@+id/chkReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_reminder" />
    <CheckBox
        android:id="@+id/chkEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_emergency" />
	</LinearLayout>
</LinearLayout>
